# xlinear

./: CMakeLists.txt
xlinear/: CMakeLists.txt
xlinear/config/: floating.h
xlinear/include/xlinear/: Floating.h  IO.h  Scalar.h
xlinear/include/xlinear/floating/: Floating.h  FloatingCompare.h  FloatingIO.h  FloatingOperators.h  FloatingPoint.h  FloatingSize.h
xlinear/include/xlinear/matrix/: Scalar.h  ScalarIO.h  ScalarMatrix.h  ScalarOperators.h  StaticMatrix.h
xlinear/src/floating/: Floating.cpp
xlinear/src/matrix/: Scalar.cpp
xlinear_tests/: CMakeLists.txt
xlinear_tests/src/: Test.cpp  Test.h  main.cpp
xlinear_tests/src/tests/: TestFloating.cpp  TestFloating.h  TestMatrix.cpp  TestMatrix.h  tests.h
